--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div id="newtask">
             <input type="text" placeholder="Enter your tasks" id ="input">
-            <button id="push" >Add</button>
+            <button id="push" onclick="addTask()" >Add</button>
         </div>
         <div id="tasks"></div>
     </div>
