--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1 style="margin-top: 10%;">MAKE YOUR PLAN</h1>
     <div class="container">
+        <h2 style="margin-left:5%; margin-top: 2%;">Todo</h2>
         <div id="newtask">
             <input type="text" placeholder="Enter your tasks" id ="input">
             <button id="push" onclick="addTask()" >Add</button>
